deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamtube-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: streamtube
  template:
    metadata:
      labels:
        app: streamtube
    spec:
      containers:
      - name: streamtube
        image: hiteshmondaldocker/streamtube-web:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
