service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamtube-service
spec:
  selector:
    app: streamtube
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
