ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamtube-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - streamtube.local        
    secretName: streamtube-tls
  rules:
  - host: streamtube.local    
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: streamtube-service
            port:
              number: 80
